Try some iOS settings for homescreen-launching
Signed-off-by: Evan Wies <evan@neomantra.net>

--- a/GolangMeetupJan2026/index.html
+++ b/GolangMeetupJan2026/index.html
@@ -2,8 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>We've Turned The Corner - NYC Golang Meetup Jan 2026</title>
+    <!-- iOS Web App (Add to Home Screen) -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="LLM Talk">
+    <!-- Android/Chrome Web App -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="theme-color" content="#1a1a2e">
     <style>
         * {
             margin: 0;
@@ -885,6 +892,21 @@
             <aside class="presenter-notes">
                 The tools are here. Whether it's bringing AI to your terminal apps, exposing your data through MCP, building agentic loops for iteration, using multimodal capabilities for debugging, or generating CAD models from code - find the patterns that work for your problems. Thanks!
             </aside>
+        </div>
+
+        <!-- Slide 13: FIN -->
+        <div class="slide" data-timeline="100" style="justify-content: center; align-items: center; text-align: center;">
+            <div style="position: relative;">
+                <div style="font-family: 'Times New Roman', 'Georgia', serif; font-size: 8em; font-style: italic; font-weight: bold; letter-spacing: 0.3em; color: #d4af37; text-shadow: 2px 2px 4px rgba(0,0,0,0.5), 0 0 40px rgba(212,175,55,0.3);">
+                    FIN
+                </div>
+                <div style="margin-top: -0.5em; font-family: 'Times New Roman', 'Georgia', serif; font-size: 1.5em; letter-spacing: 0.5em; color: #888;">
+                    ✦ ✦ ✦
+                </div>
+                <div style="margin-top: 2em; font-family: 'Times New Roman', 'Georgia', serif; font-size: 1.2em; font-style: italic; color: #666; letter-spacing: 0.1em;">
+                    — A Neomantra Production —
+                </div>
+            </div>
         </div>
     </div>
 
