Add vibe-code QR codes
Signed-off-by: Evan Wies <evan@neomantra.net>

--- a/GolangMeetupJan2026/index.html
+++ b/GolangMeetupJan2026/index.html
@@ -579,6 +579,10 @@
             <p style="margin-top: 2em; color: #666;">NYC Golang Meetup | January 2026</p>
             <p style="color: #ccc; margin-top: 1em;">Evan Wies</p>
             <p style="color: #888; margin-top: 0.3em;">evan@neomantra.net · @neomantra</p>
+            <div style="margin-top: 1.5em; display: flex; justify-content: center; gap: 80px;">
+                <img src="images/qr-deck.png" alt="QR Code to Deck" style="height: 260px;">
+                <img src="images/qr-repo.png" alt="QR Code to Repo" style="height: 260px;">
+            </div>
             <aside class="presenter-notes">
                 Welcome everyone. I'm going to share my journey over the past 14 months using LLMs - from early experiments with code generation and multi-modal models, to now using them for practical everyday work. Press 'N' to toggle these notes.
             </aside>
@@ -934,6 +938,10 @@
                 </div>
                 <div style="margin-top: 2em; font-family: 'Times New Roman', 'Georgia', serif; font-size: 1.2em; font-style: italic; color: #666; letter-spacing: 0.1em;">
                     — A Neomantra Production —
+                </div>
+                <div style="margin-top: 1.5em; display: flex; justify-content: center; gap: 80px;">
+                    <img src="images/qr-deck.png" alt="QR Code to Deck" style="height: 260px;">
+                    <img src="images/qr-repo.png" alt="QR Code to Repo" style="height: 260px;">
                 </div>
             </div>
         </div>
