Update title to "LLM Odyssey 2025: From TUI Experiments to Agentic Wins in Golang"
Signed-off-by: Evan Wies <evan@neomantra.net>

--- a/GolangMeetupJan2026/index.html
+++ b/GolangMeetupJan2026/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>We've Turned The Corner - NYC Golang Meetup Jan 2026</title>
+    <title>LLM Odyssey 2025 - NYC Golang Meetup Jan 2026</title>
     <!-- iOS Web App (Add to Home Screen) -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -574,8 +574,8 @@
     <div class="slide-container">
         <!-- Slide 0: Title -->
         <div class="slide title-slide" data-timeline="0">
-            <h1>We've Turned The Corner</h1>
-            <p class="subtitle">From LLM Experiments to Getting Work Done</p>
+            <h1>LLM Odyssey 2025</h1>
+            <p class="subtitle">From TUI Experiments to Agentic Wins in Golang</p>
             <p style="margin-top: 2em; color: #666;">NYC Golang Meetup | January 2026</p>
             <p style="color: #ccc; margin-top: 1em;">Evan Wies</p>
             <p style="color: #888; margin-top: 0.3em;">evan@neomantra.net · @neomantra</p>
