More content tweaks
Signed-off-by: Evan Wies <evan@neomantra.net>

--- a/GolangMeetupJan2026/index.html
+++ b/GolangMeetupJan2026/index.html
@@ -616,8 +616,12 @@
             <p style="color: #ccc; margin-top: 1em;">Evan Wies</p>
             <p style="color: #888; margin-top: 0.3em;">evan@neomantra.net · @neomantra</p>
             <div style="margin-top: 1.5em; display: flex; justify-content: center; gap: 80px;">
-                <img src="images/qr-deck.png" alt="QR Code to Deck" style="height: 260px;">
-                <img src="images/qr-repo.png" alt="QR Code to Repo" style="height: 260px;">
+                <a href="https://neomantra.github.io/presentations/GolangMeetupJan2026/" target="_blank">
+                    <img src="images/qr-deck.png" alt="QR Code to Deck" style="height: 260px;">
+                </a>
+                <a href="https://github.com/neomantra/presentations/tree/master/GolangMeetupJan2026" target="_blank">
+                    <img src="images/qr-repo.png" alt="QR Code to Repo" style="height: 260px;">
+                </a>
             </div>
             <aside class="presenter-notes">
                 Welcome everyone. I'm going to share my journey over the past 14 months using LLMs - from early experiments with code generation and multi-modal models, to now using them for practical everyday work. Press 'N' to toggle these notes.
@@ -770,10 +774,11 @@
             <h2>AntiGravity + Frontier Models 😵‍💫</h2>
             <ul>
                 <li><span class="key-phrase">Gemini 3 Pro</span> + <span class="key-phrase">Claude Opus 4.5</span></li>
-                <li>One-shot: AgentDank verification page + chat interface</li>
-                <li>One-shot: DBA environment with embedded DuckDB WASM</li>
-                <li>3D WebGL charts of cannabis data</li>
-                <li>Built between train stops</li>
+                <li><em>One-shot:</em> AgentDank verification page + chat interface</li>
+                <li>Then free to vibe new features...</li>
+                <li><em>One-shot:</em> DBA environment with embedded DuckDB WASM</li>
+                <li>Then vibed 3D WebGL charts of query results</li>
+                <li>Built between meetings and commutes</li>
             </ul>
             <div class="slide-media slide-media-large">
                 <a href="images/dank-webchat.png" target="_blank">
@@ -810,6 +815,8 @@
             <div class="slide-links">
                 <a href="https://github.com/ConAcademy/quadratic_explorer" target="_blank">github.com/ConAcademy/quadratic_explorer</a>
                 <a href="https://github.com/ConAcademy/proving_parallelograms" target="_blank">github.com/ConAcademy/proving_parallelograms</a>
+                <a href="https://conacademy.github.io/quadratic_explorer/" target="_blank">conacademy.github.io/quadratic_explorer</a>
+                <a href="https://conacademy.github.io/proving_parallelograms/" target="_blank">conacademy.github.io/proving_parallelograms</a>
             </div>
             <aside class="presenter-notes">
                 I was substitute teaching and the kids were just doing Google Classroom busywork. So I started vibe coding on the smartboard - built a quadratic formula explorer for algebra, then a parallelogram proof visualizer for honors geometry. The kids got to see code come together in real-time with AI assistance. Planted some seeds about what's possible.
@@ -980,7 +987,7 @@
         <div class="slide final-slide" data-timeline="100" style="justify-content: center; align-items: center; text-align: center;">
             <h2>Wield this magic!<br>Use it to solve your problems...</h2>
             <p style="margin-top: 2em; font-size: 1.3em; color: #888;">
-                Terminal UIs • MCP servers • Agentic loops • Multi-modal debugging • CAD generation
+                Multi-modal Models • Tool Calling • Agentic Loops • Vibe Coding
             </p>
             <div class="slide-links" style="position: relative; bottom: auto; left: auto; right: auto; margin-top: 3em; text-align: center;">
                 <a href="https://news.ycombinator.com/user?id=neomantra" target="_blank">news.ycombinator.com/user?id=neomantra</a>
@@ -1006,8 +1013,12 @@
                     — A Neomantra Production —
                 </div>
                 <div style="margin-top: 1.5em; display: flex; justify-content: center; gap: 80px;">
-                    <img src="images/qr-deck.png" alt="QR Code to Deck" style="height: 260px;">
-                    <img src="images/qr-repo.png" alt="QR Code to Repo" style="height: 260px;">
+                    <a href="https://neomantra.github.io/presentations/GolangMeetupJan2026/" target="_blank">
+                        <img src="images/qr-deck.png" alt="QR Code to Deck" style="height: 260px;">
+                    </a>
+                    <a href="https://github.com/neomantra/presentations/tree/master/GolangMeetupJan2026" target="_blank">
+                        <img src="images/qr-repo.png" alt="QR Code to Repo" style="height: 260px;">
+                    </a>
                 </div>
             </div>
         </div>
