--- a/GolangMeetupJan2026/index.html
+++ b/GolangMeetupJan2026/index.html
@@ -395,77 +395,6 @@
             display: inline;
         }
 
-        /* Settings dialog */
-        .settings-dialog {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: #222;
-            border: 1px solid #444;
-            border-radius: 8px;
-            padding: 20px;
-            z-index: 1000;
-            min-width: 280px;
-        }
-
-        .settings-dialog.visible {
-            display: block;
-        }
-
-        .settings-dialog h3 {
-            color: #4a9eff;
-            margin-bottom: 15px;
-            font-size: 1.2em;
-        }
-
-        .settings-dialog label {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            margin-bottom: 12px;
-            cursor: pointer;
-            font-size: 1em;
-            color: #ccc;
-        }
-
-        .settings-dialog input[type="checkbox"] {
-            width: 18px;
-            height: 18px;
-            cursor: pointer;
-        }
-
-        .settings-dialog .close-btn {
-            margin-top: 15px;
-            background: #333;
-            color: #fff;
-            border: none;
-            padding: 8px 16px;
-            border-radius: 4px;
-            cursor: pointer;
-            width: 100%;
-        }
-
-        .settings-dialog .close-btn:hover {
-            background: #4a9eff;
-        }
-
-        .settings-overlay {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0,0,0,0.5);
-            z-index: 999;
-        }
-
-        .settings-overlay.visible {
-            display: block;
-        }
-
         /* Safe mode styles */
         .nsfw-indicator {
             position: fixed;
@@ -824,7 +753,7 @@
                 <a href="https://github.com/NimbleMarkets/dbn-go/raw/main/cmd/dbn-go-mcp/claude_get_cost.png" target="_blank">
                     <img src="https://github.com/NimbleMarkets/dbn-go/raw/main/cmd/dbn-go-mcp/claude_get_cost.png" alt="dbn-go-mcp demo">
                 </a>
-                <video src="https://github.com/user-attachments/assets/adb8e56f-178d-4646-9e0f-4fcf57614dea#t=22" autoplay loop muted></video>
+                <video src="https://github.com/user-attachments/assets/adb8e56f-178d-4646-9e0f-4fcf57614dea#t=22" autoplay loop muted class="nsfw-only"></video>
             </div>
             <div class="takeaway">
                 <p><span class="key-phrase">Learnings:</span> Tool descriptions are crucial. LLMs love structured markdown. APIs aren't always meant to be wrapped directly.</p>
@@ -1153,20 +1082,6 @@
 
     <div class="nsfw-indicator">✕</div>
 
-    <div class="settings-overlay" id="settings-overlay"></div>
-    <div class="settings-dialog" id="settings-dialog">
-        <h3>Settings</h3>
-        <label>
-            <input type="checkbox" id="nsfw-toggle">
-            Enable full content
-        </label>
-        <label>
-            <input type="checkbox" id="shake-toggle">
-            Shake to toggle
-        </label>
-        <button class="close-btn" id="settings-close">Close</button>
-    </div>
-
     <div class="nav">
         <button onclick="prevSlide()">← Prev</button>
         <button onclick="nextSlide()">Next →</button>
@@ -1346,104 +1261,11 @@
         }
 
         function toggleSafeMode() {
-            const isCurrentlySafe = document.body.classList.contains('safe-mode');
             document.body.classList.toggle('safe-mode');
             document.body.classList.toggle('nsfw-mode');
-
-            // Update checkbox if dialog is open
-            const nsfwToggle = document.getElementById('nsfw-toggle');
-            if (nsfwToggle) {
-                nsfwToggle.checked = !isCurrentlySafe;
-            }
-
-            // Save to cookie
-            saveSettings();
         }
 
-        // Cookie management
-        function saveSettings() {
-            const isNsfw = document.body.classList.contains('nsfw-mode');
-            const shakeEnabled = document.getElementById('shake-toggle')?.checked || false;
-            const settings = { nsfw: isNsfw, shake: shakeEnabled };
-            document.cookie = `deckSettings=${JSON.stringify(settings)};path=/;max-age=31536000;SameSite=Strict`;
-        }
-
-        function loadSettings() {
-            const match = document.cookie.match(/deckSettings=([^;]+)/);
-            if (match) {
-                try {
-                    const settings = JSON.parse(match[1]);
-                    if (settings.nsfw) {
-                        document.body.classList.remove('safe-mode');
-                        document.body.classList.add('nsfw-mode');
-                        document.getElementById('nsfw-toggle').checked = true;
-                    }
-                    if (settings.shake) {
-                        document.getElementById('shake-toggle').checked = true;
-                        initShakeDetection();
-                    }
-                } catch (e) {}
-            }
-        }
-
-        // Settings dialog
-        const settingsDialog = document.getElementById('settings-dialog');
-        const settingsOverlay = document.getElementById('settings-overlay');
-        const nsfwToggle = document.getElementById('nsfw-toggle');
-        const shakeToggle = document.getElementById('shake-toggle');
-        const settingsClose = document.getElementById('settings-close');
-        const nav = document.querySelector('.nav');
-
-        function openSettings() {
-            settingsDialog.classList.add('visible');
-            settingsOverlay.classList.add('visible');
-        }
-
-        function closeSettings() {
-            settingsDialog.classList.remove('visible');
-            settingsOverlay.classList.remove('visible');
-        }
-
-        settingsClose.addEventListener('click', closeSettings);
-        settingsOverlay.addEventListener('click', closeSettings);
-
-        nsfwToggle.addEventListener('change', function() {
-            if (this.checked) {
-                document.body.classList.remove('safe-mode');
-                document.body.classList.add('nsfw-mode');
-            } else {
-                document.body.classList.remove('nsfw-mode');
-                document.body.classList.add('safe-mode');
-            }
-            saveSettings();
-        });
-
-        shakeToggle.addEventListener('change', async function() {
-            if (this.checked) {
-                // Request permission on iOS if needed
-                if (typeof DeviceMotionEvent !== 'undefined' &&
-                    typeof DeviceMotionEvent.requestPermission === 'function') {
-                    try {
-                        const permission = await DeviceMotionEvent.requestPermission();
-                        if (permission !== 'granted') {
-                            this.checked = false;
-                            alert('Motion permission denied. Shake detection unavailable.');
-                            return;
-                        }
-                    } catch (e) {
-                        this.checked = false;
-                        alert('Could not request motion permission.');
-                        return;
-                    }
-                }
-                initShakeDetection();
-            } else {
-                removeShakeDetection();
-            }
-            saveSettings();
-        });
-
-        // Simultaneous tap on Notes + Full buttons to open settings
+        // Simultaneous tap on Notes + Full buttons to toggle safe mode
         const notesBtn = document.getElementById('notes-btn');
         const fullBtn = document.getElementById('fullscreen-btn');
         let notesTapTime = 0;
@@ -1453,7 +1275,7 @@
         notesBtn.addEventListener('click', function() {
             notesTapTime = Date.now();
             if (Math.abs(notesTapTime - fullTapTime) < SIMULTANEOUS_THRESHOLD) {
-                openSettings();
+                toggleSafeMode();
                 notesTapTime = fullTapTime = 0;
             }
         });
@@ -1461,58 +1283,10 @@
         fullBtn.addEventListener('click', function() {
             fullTapTime = Date.now();
             if (Math.abs(fullTapTime - notesTapTime) < SIMULTANEOUS_THRESHOLD) {
-                openSettings();
+                toggleSafeMode();
                 notesTapTime = fullTapTime = 0;
             }
         });
-
-        // Shake detection
-        let shakeHandler = null;
-        let lastX = null, lastY = null, lastZ = null;
-        const SHAKE_THRESHOLD = 25;
-        let lastShakeTime = 0;
-
-        function initShakeDetection() {
-            if (shakeHandler) return;
-
-            shakeHandler = function(e) {
-                const { x, y, z } = e.accelerationIncludingGravity || {};
-                if (x === null || x === undefined) return;
-
-                if (lastX !== null) {
-                    const deltaX = Math.abs(x - lastX);
-                    const deltaY = Math.abs(y - lastY);
-                    const deltaZ = Math.abs(z - lastZ);
-
-                    if ((deltaX > SHAKE_THRESHOLD && deltaY > SHAKE_THRESHOLD) ||
-                        (deltaX > SHAKE_THRESHOLD && deltaZ > SHAKE_THRESHOLD) ||
-                        (deltaY > SHAKE_THRESHOLD && deltaZ > SHAKE_THRESHOLD)) {
-                        const now = Date.now();
-                        if (now - lastShakeTime > 1000) { // Debounce 1 second
-                            lastShakeTime = now;
-                            toggleSafeMode();
-                        }
-                    }
-                }
-
-                lastX = x;
-                lastY = y;
-                lastZ = z;
-            };
-
-            window.addEventListener('devicemotion', shakeHandler);
-        }
-
-        function removeShakeDetection() {
-            if (shakeHandler) {
-                window.removeEventListener('devicemotion', shakeHandler);
-                shakeHandler = null;
-                lastX = lastY = lastZ = null;
-            }
-        }
-
-        // Load settings on page load
-        loadSettings();
 
         document.addEventListener('keydown', (e) => {
             if (e.key === 'ArrowRight' || e.key === ' ') {
