Fixup screentime mcp slide
Signed-off-by: Evan Wies <evan@neomantra.net>

--- a/GolangMeetupJan2026/index.html
+++ b/GolangMeetupJan2026/index.html
@@ -845,7 +845,7 @@
                 <li>🤖 Agentic loop: LLM self-improved MCP files through my personal self-improvement prompting</li>
             </ul>
             <div class="takeaway">
-                <p>Never fully released — <span class="key-phrase">ScreenTime data is very sensitive</span>. No footguns allowed. Beware of hallucinations from fuzzy context!</p>
+                <p>Never released binaries — <span class="key-phrase">ScreenTime data is very sensitive</span>. Beware of hallucinations from fuzzy context!</p>
             </div>
             <div class="slide-media">
                 <a href="images/ScreentimeMcpRedacted.png" target="_blank">
