Add presentation URL to first and final pages
Signed-off-by: Evan Wies <evan@neomantra.net>

--- a/GolangMeetupJan2026/index.html
+++ b/GolangMeetupJan2026/index.html
@@ -710,7 +710,8 @@
                     <img src="images/qr-repo.png" alt="QR Code to Repo" style="height: 260px;">
                 </a>
             </div>
-            <p style="margin-top: 2em; font-size: 0.7em; color: #555;">Copyright © 2026 Evan Wies · MIT Licensed</p>
+            <p style="margin-top: 1em; font-size: 1.2em;"><a href="https://neomantra.github.io/presentations/GolangMeetupJan2026/" target="_blank" style="color: #4a9eff;">https://neomantra.github.io/presentations/GolangMeetupJan2026/</a></p>
+            <p style="margin-top: 1em; font-size: 0.7em; color: #555;">Copyright © 2026 Evan Wies · MIT Licensed</p>
             <aside class="presenter-notes">
                 Welcome everyone. I'm going to share my journey over the past 14 months using LLMs - from early experiments with code generation and multi-modal models, to now using them for practical everyday work. Press 'N' to toggle these notes.
             </aside>
@@ -1163,7 +1164,8 @@
                         <img src="images/qr-repo.png" alt="QR Code to Repo" style="height: 260px;">
                     </a>
                 </div>
-                <p style="margin-top: 2em; font-size: 0.7em; color: #555;">Copyright © 2026 Evan Wies · MIT Licensed</p>
+                <p style="margin-top: 1em; font-size: 1.2em;"><a href="https://neomantra.github.io/presentations/GolangMeetupJan2026/" target="_blank" style="color: #4a9eff;">https://neomantra.github.io/presentations/GolangMeetupJan2026/</a></p>
+                <p style="margin-top: 1em; font-size: 0.7em; color: #555;">Copyright © 2026 Evan Wies · MIT Licensed</p>
             </div>
         </div>
     </div>
