Update some speaker notes
Signed-off-by: Evan Wies <evan@neomantra.net>

--- a/GolangMeetupJan2026/index.html
+++ b/GolangMeetupJan2026/index.html
@@ -713,7 +713,7 @@
             <p style="margin-top: 1em; font-size: 1.2em;"><a href="https://neomantra.github.io/presentations/GolangMeetupJan2026/" target="_blank" style="color: #4a9eff;">https://neomantra.github.io/presentations/GolangMeetupJan2026/</a></p>
             <p style="margin-top: 1em; font-size: 0.7em; color: #555;">Copyright © 2026 Evan Wies · MIT Licensed</p>
             <aside class="presenter-notes">
-                Welcome everyone. I'm going to share my journey over the past 14 months using LLMs - from early experiments with code generation and multi-modal models, to now using them for practical everyday work. Press 'N' to toggle these notes.
+                Welcome everyone. I'm going to share my journey over the past 14 months using LLMs - from early experiments with code generation and multi-modal models, to now using them for practical everyday work. While it's my Odyssey, this presentation is not about me.  My experiences were with Golang and these new creation are available to all of us.  I hope you come away with some itches to scratch and some inspiration to create. Press 'N' to toggle these notes.
             </aside>
         </div>
 
@@ -744,7 +744,7 @@
                 <a href="https://github.com/NimbleMarkets/dbn-go" target="_blank">github.com/NimbleMarkets/dbn-go</a>
             </div>
             <aside class="presenter-notes">
-                This started with OllamaTea - BubbleTea components that let you interact with Ollama models right in your terminal. The interesting part was combining this with DataBento financial data through dbn-go, creating a demo where the model could analyze time-series charts. Key insight: terminal apps don't have to be disconnected from AI.
+                My journey started over a year ago, November 2024, with OllamaTea - BubbleTea components that let you interact with Ollama models right in your terminal. I was really excited at the prospect of local inferencing, which seems quaint now given the DRAM shortage.  I have been very into Terminal User Interfaces (TUIs), even promoting NTCharts, a terminal charting library.  As a demo, I combined OllamaTea's local inferencing with DataBento marketl data through another project, dbn-go.  I wanted to flex the multi-modal capabilities of some local models, their ability to "see".  I created a demo where the model analyze a time-series charts for a trend.  It was amazing to me that I could do this.   It was all foreshadowing an amazing year ahead.
             </aside>
         </div>
 
@@ -773,6 +773,9 @@
                     <div class="desc">Fast, capable image generation model</div>
                 </div>
             </div>
+            <div class="takeaway milestone-link" data-milestone="4" style="margin-top: 1em;">
+                <p>🔨 Tools • 🧠 Thinking • 🤖 Agentic Environments • 👀 Multi-Modal World Understanding</p>
+            </div>
             <div class="slide-links" id="milestone-links">
                 <a href="https://modelcontextprotocol.io" target="_blank" class="milestone-link" data-milestone="1">modelcontextprotocol.io</a>
                 <a href="https://en.wikipedia.org/wiki/DeepSeek" target="_blank" class="milestone-link" data-milestone="2">en.wikipedia.org/wiki/DeepSeek</a>
@@ -780,7 +783,7 @@
                 <a href="https://blog.google/innovation-and-ai/products/nano-banana-pro/" target="_blank" class="milestone-link" data-milestone="4">blog.google/.../nano-banana-pro</a>
             </div>
             <aside class="presenter-notes">
-                Quick industry context: MCP gave us the standard for tool use, DeepSeek showed open research can match frontier models, Claude Code brought agentic coding to the terminal, and Nano Banana democratized image generation. These set the stage for everything I built.
+                The AI industry produced an tremendous amount of progress on many fronts.   Quick industry milestones: Anthropic MCP gave us the standard for tool use, DeepSeek showed open research can match frontier models and cemented the power of Reinforcement Learning, Claude Code brought agentic coding to the terminal, and Nano Banana brough insane multi-modal image generation and comprehension, plus tools like NotebookLM which created podcasts.   These key capabilities of Tool, Thinking, Agentic Environments, and Multi-Modal World Understanding set the stage for us.
             </aside>
         </div>
 
